src/test/deca/syntax/valid/provided/hello.deca
// Description:
//    Minimalistic program using println.
//
// Results:
//    Hello
//
// History:
//    Created on 01/01/2025

{
        println("Hello");
}
