src/test/deca/syntax/invalid/reserved_words/rw_if.deca
// Description:
//    Program testing the raising of an exception for a reserved word.
//
// Results:
//    Line 11: wrong usage of a reserved word.
//
// History:
//    Created on 06/01/2025

{
    float if ;
}
